opam-version: "2.0"
version: "v0.17.1"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core"
bug-reports: "https://github.com/janestreet/core/issues"
dev-repo: "git+https://github.com/janestreet/core.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"               {>= "5.1.0"}
  "base"                {>= "v0.17" & < "v0.18"}
  "base_bigstring"      {>= "v0.17" & < "v0.18"}
  "base_quickcheck"     {>= "v0.17" & < "v0.18"}
  "bin_prot"            {>= "v0.17" & < "v0.18"}
  "fieldslib"           {>= "v0.17" & < "v0.18"}
  "jane-street-headers" {>= "v0.17" & < "v0.18"}
  "jst-config"          {>= "v0.17" & < "v0.18"}
  "ppx_assert"          {>= "v0.17" & < "v0.18"}
  "ppx_base"            {>= "v0.17" & < "v0.18"}
  "ppx_diff"            {>= "v0.17" & < "v0.18"}
  "ppx_hash"            {>= "v0.17" & < "v0.18"}
  "ppx_inline_test"     {>= "v0.17" & < "v0.18"}
  "ppx_jane"            {>= "v0.17" & < "v0.18"}
  "ppx_optcomp"         {>= "v0.17" & < "v0.18"}
  "ppx_sexp_conv"       {>= "v0.17" & < "v0.18"}
  "ppx_sexp_message"    {>= "v0.17" & < "v0.18"}
  "sexplib"             {>= "v0.17" & < "v0.18"}
  "splittable_random"   {>= "v0.17" & < "v0.18"}
  "stdio"               {>= "v0.17" & < "v0.18"}
  "time_now"            {>= "v0.17" & < "v0.18"}
  "typerep"             {>= "v0.17" & < "v0.18"}
  "variantslib"         {>= "v0.17" & < "v0.18"}
  "dune"                {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Industrial strength alternative to OCaml's standard library"
description: "
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.

This is the system-independent part of Core. Unix-specific parts were moved to [core_unix].
"
