opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core"
bug-reports: "https://github.com/janestreet/core/issues"
dev-repo: "git+https://github.com/janestreet/core.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "base_bigstring"
  "base_quickcheck"
  "bin_prot"
  "capsule"
  "fieldslib"
  "jane-street-headers"
  "jst-config"
  "parsexp"
  "portable"
  "ppx_assert"
  "ppx_base"
  "ppx_diff"
  "ppx_expect"
  "ppx_hash"
  "ppx_inline_test"
  "ppx_jane"
  "ppx_optcomp"
  "ppx_sexp_conv"
  "ppx_sexp_message"
  "ppx_stable_witness"
  "sexplib"
  "splittable_random"
  "stdio"
  "string_dict"
  "time_now"
  "typerep"
  "univ_map"
  "uopt"
  "variantslib"
  "dune"                {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Industrial strength alternative to OCaml's standard library"
description: "
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.

This is the system-independent part of Core. Unix-specific parts were moved to [core_unix].
"
