(library (name bigstring_unix) (public_name core.bigstring_unix)
 (libraries core_kernel.core core_unix ocaml_c_utils)
 (c_names bigstring_unix_stubs recvmmsg) (preprocessor_deps config.h)
 (preprocess (pps ppx_jane)))

(rule (targets config.h) (deps)
 (action (bash "cp %{lib:jst-config:config.h} .")))

(rule (targets socketaddr.h) (deps)
 (action (bash "cp %{lib:core.core_unix:socketaddr.h} .")))