(library
 (foreign_stubs
  (language c)
  (names replace_caml_modify_for_testing_stub))
 (name replace_caml_modify_for_testing)
 (library_flags -cclib -Xlinker -cclib --wrap -cclib -Xlinker -cclib
   caml_modify -cclib -Xlinker -cclib --wrap -cclib -Xlinker -cclib
   caml_modify_local)
 (preprocess
  (pps ppx_inline_test)))
